CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.6        |
+-----------------------+
BUGFIXES
03-02-06    Checks for session timeout improved (Andrey Podshivalov)
31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
            (sirphp)

IMPROVEMENTS
07-02-06    Implemented a SGL::objectHasState() method to prevent inserting
            invalid objects.
07-02-06    Improved authorisation in SGL_Manager
07-02-06    Clarified distinction between authentication and authorisation
07-02-06    Removed 2 fatal errors for missing parent::Manager and unknown
            action, now you get an error page
07-02-06    Removed 2 non-essential process filters, SGL_Process_DetectDebug
            and SGL_Process_DetectBlackListing
07-02-06    Cleaned up URI parsing, toString() method moved from parsers to SGL_Url.
07-02-06    Error handling moved from filter chain up to Init tasks
06-02-06    Renamed all instances of IMessage to 'instant message'
06-02-06    Moved all install-related files to lib/SGL/Install
03-02-06    Html renderers moved to their own folder in lib/SGL
03-02-06    Url parsers moved to their own folder in lib/SGL
03-02-06    Messages can be passed type info (Andrey Podshivalov)
01-02-06    Improved logic in installer for improved flexibility
30-01-06    Added path search for email templates when default theme is not being
            used (Werner Krauss)
30-01-06    Region lists added for Poland (Tomasz Osmialowski)
30-01-06    Added perm checking method for use in templates, SGL_Output::hasPerms()
            (Tomasz Osmialowski)
30-01-06    Implemented abilty for blocks to receive stored params, removed
            Quickform from block code (Andrey Podshivalov)
30-01-06    SGL_HTTP_Session renamed to SGL_Session
30-01-06    SGL_HTTP::redirect(array()); cleaned up to SGL_HTTP::redirect();
26-01-06    Path to seagull/var explicitly named when not writable in installer

+-----------------------+
| VERSION: 0.5.5        |