@@ -2,19 +2,19 @@
 -- Dumping data for table block
 --
 
-INSERT INTO block VALUES (1, 'SiteNews', 'Site News', '', '', 2, 'Left', 1, NULL);
-INSERT INTO block VALUES (3, 'SampleBlock1', 'SourceForge Site', '', '', 3, 'Left', 1, NULL);
-INSERT INTO block VALUES (4, 'SampleBlock2', 'Syndication', '', '', 4, 'Left', 1, NULL);
-INSERT INTO block VALUES (5, 'CategoryNav', 'Categories', '', 'navWidget', 1, 'Left', 1, NULL);
-INSERT INTO block VALUES (10, 'SampleRightBlock1', 'Sample Right Block', '', '', 1, 'Right', 1, NULL);
-INSERT INTO block VALUES (11, 'CalendarBlock', 'Calendar', '', '', 2, 'Right', 0, NULL);
-INSERT INTO block VALUES (12, 'LoginBlock', 'Login', '', '', 3, 'Right', 0, NULL);
-INSERT INTO block VALUES (13, 'ShopNav', 'Products', '', 'sgl-dropdown', 1, 'Left', 0, NULL);
-INSERT INTO block VALUES (14, 'ShoppingCart', 'Cart', '', '', 1, 'Right', 0, NULL);
-INSERT INTO block VALUES (15, 'RndProducts', 'Promotions', '', 'rndProducts', 5, 'Right', 0, NULL);
-INSERT INTO block VALUES (16, 'ShopSearch', 'Search', '', '', 7, 'Left', 0, NULL);
-INSERT INTO block VALUES (17, 'NewsletterBlock', 'Newsletter', '', '', 5, 'Right', 0, NULL);
-INSERT INTO block VALUES (18, 'Exchange', 'Exchange', '', '', 9, 'Left', 0, NULL);
+INSERT INTO block VALUES (1, 'SiteNews', 'Site News', '', '', 2, 'Left', 1, 1, NULL);
+INSERT INTO block VALUES (3, 'SampleBlock1', 'SourceForge Site', '', '', 3, 'Left', 1, 1, NULL);
+INSERT INTO block VALUES (4, 'SampleBlock2', 'Syndication', '', '', 4, 'Left', 1, 1, NULL);
+INSERT INTO block VALUES (5, 'CategoryNav', 'Categories', '', 'navWidget', 1, 'Left', 1, 1, NULL);
+INSERT INTO block VALUES (10, 'SampleRightBlock1', 'Sample Right Block', '', '', 1, 'Right', 1, 1, NULL);
+INSERT INTO block VALUES (11, 'CalendarBlock', 'Calendar', '', '', 2, 'Right', 0, 1, NULL);
+INSERT INTO block VALUES (12, 'LoginBlock', 'Login', '', '', 3, 'Right', 0, 0, NULL);
+INSERT INTO block VALUES (13, 'ShopNav', 'Products', '', 'sgl-dropdown', 1, 'Left', 0, 1, NULL);
+INSERT INTO block VALUES (14, 'ShoppingCart', 'Cart', '', '', 1, 'Right', 0, 1, NULL);
+INSERT INTO block VALUES (15, 'RndProducts', 'Promotions', '', 'rndProducts', 5, 'Right', 0, 1, NULL);
+INSERT INTO block VALUES (16, 'ShopSearch', 'Search', '', '', 7, 'Left', 0, 1, NULL);
+INSERT INTO block VALUES (17, 'NewsletterBlock', 'Newsletter', '', '', 5, 'Right', 0, 1, NULL);
+INSERT INTO block VALUES (18, 'Exchange', 'Exchange', '', '', 9, 'Left', 0, 1, NULL);
 
 --
 -- Dumping data for table block_assignment
